# hypertopos-skills

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
gds-analyst/: SKILL.md
gds-analyst/references/: decision-framework.md  examples.md
gds-detective/: SKILL.md
gds-detective/references/: examples.md
gds-explorer/: SKILL.md
gds-explorer/references/: examples.md
gds-fraud-investigator/: SKILL.md
gds-fraud-investigator/references/: typologies.md
gds-investigator/: SKILL.md
gds-investigator/references/: examples.md
gds-monitor/: SKILL.md
gds-monitor/references/: examples.md
gds-scanner/: SKILL.md
gds-sphere-designer/: SKILL.md
gds-sphere-designer/references/: advanced-features.md  design-patterns.md  domain-patterns.md  examples.md
