[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hypertopos-skills"
version = "0.3.2"
description = "Investigation workflows for AI agents exploring geometric data spaces"
requires-python = ">=3.12"
license = "Apache-2.0"

[[project.authors]]
name = "Karol Kędzia"

[project.urls]
Homepage = "https://github.com/hypertopos/hypertopos-skills"
Documentation = "https://github.com/hypertopos/hypertopos-skills"
Repository = "https://github.com/hypertopos/hypertopos-skills"

[tool.hatch.build.targets.wheel]
packages = [
    "gds-analyst",
    "gds-explorer",
    "gds-investigator",
    "gds-detective",
    "gds-scanner",
    "gds-monitor",
    "gds-fraud-investigator",
    "gds-sphere-designer",
]

[tool.hatch.build.targets.sdist]
include = [
    "gds-*/SKILL.md",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
]
